Use more meaningful description for extra permissions

--- a/webextensions/_locales/en/messages.json
+++ b/webextensions/_locales/en/messages.json
@@ -404,7 +404,7 @@
   "config_userStyleRules_themeRules_description": { "message": "Following custom properties are also available via \"var()\", based on the current browser theme:" },
 
   "config_externaladdonpermissions_label": { "message": "Permissions for API Call from Other Addons" },
-  "config_externaladdonpermissions_description": { "message": "Addons allowed here may access your privacy data <em>through Tree Style Tab's permissions</em>, even if the addon ifself is forbidden by Firefox to access such information. <em>Please don't give permission for addons if you cannot trust.</em>" },
+  "config_externaladdonpermissions_description": { "message": "Addons allowed here may access detailed tab data or tabs in private windows, <em>through Tree Style Tab's permissions</em>, even if the addon ifself is forbidden by Firefox to access them. <em>Please don't give permission for addons if you cannot trust.</em>" },
   "config_externalAddonPermissions_header_name": { "message": "Addon Name" },
   "config_externalAddonPermissions_header_permissions": { "message": "Allowed Special Operations" },
   "config_externalAddonPermissions_header_incognito": { "message": "Notify Messages from Private Windows" },
