--- a/webextensions/_locales/de/messages.json
+++ b/webextensions/_locales/de/messages.json
@@ -64,6 +64,7 @@
     }},
   "groupTab_label_default": { "message": "Gruppe" },
   "groupTab_temporary_label": { "message": "Diesen Tab schließen, wenn keine untergeordneten Tabs mehr existieren" },
+  "groupTab_temporaryAggressive_label": { "message": "Diesen Tab schließen, wenn nicht mehr als ein untergeordneter Tab existiert" },
   "groupTab_fromPinnedTab_label": { "message": "Tabs von $TITLE$",
     "placeholders": {
       "title": { "content": "$1", "example": "Titel" }
@@ -174,6 +175,16 @@
   "message_startup_userChromeCss_description_2": { "message": ". Aber " },
   "message_startup_userChromeCss_description_note": { "message": "sei Dir bewusst, dass es sich um tiefgreifende Anpassungen handelt. Daher gibt es keine Garantie und sie können in künftigen Firefox-Versionen Probleme verursachen. Bitte auf eigenes Risiko ausprobieren und nur wenn du weißt, was du tust und dir zutraust, mögliche Probleme selbst zu beheben." },
   "message_startup_userChromeCss_description_3": { "message": "." },
+
+  "api_requestedPermissions_title": { "message": "Erteilung von zusätzlichen Berechtigungen" },
+  "api_requestedPermissions_message": { "message": "⚠Die Erweiterung \"$NAME$\" bittet um zusätzliche Berechtigungen über Tree Style Tab:\n\n$PERMISSIONS$\n\nHier klicken um die Berechtigungen zu erteilen.",
+    "placeholders": {
+      "NAME":        { "content": "$1", "example": "foobar" },
+      "PERMISSIONS": { "content": "$2", "example": "tabs" }
+    }},
+  "api_requestedPermissions_type_activeTab": { "message": "Zugriff auf aktiven Tab" },
+  "api_requestedPermissions_type_tabs":      { "message": "Zugriff auf Tabs" },
+  "api_requestedPermissions_type_cookies":   { "message": "Erkennung der Tab-Umgebungen" },
 
 
   "context_reloadTree_label": { "message": "Zweig neu la&den" },
@@ -391,6 +402,12 @@
   "config_userStyleRules_description_after": { "message": "." },
   "config_userStyleRules_description_link_uri": { "message": "https://github.com/piroor/treestyletab/wiki/Code-snippets-for-custom-style-rules#for-version-2x" },
   "config_userStyleRules_themeRules_description": { "message": "Folgende Eigenschaften sind per \"var()\" basierend auf dem aktuellen Browser-Design verfügbar:" },
+
+  "config_externaladdonpermissions_label": { "message": "Berechtigungen für API-Zugriffe von anderen Erweiterungen" },
+  "config_externaladdonpermissions_description": { "message": "Hier zugelassene Erweiterungen erhalten Zugriff auf detaillierte Tab-Informationen und Tabs in privaten Fenstern, <em>durch die Berechtigungen von Tree Style Tab</em>, auch wenn die Berechtigungen der Erweiterung selbst durch Firefox nicht erteilt wurden. <em>Berechtigungen nicht erteilen, wenn der Erweiterung nicht vertraut wird.</em>" },
+  "config_externalAddonPermissions_header_name": { "message": "Name der Erweiterung" },
+  "config_externalAddonPermissions_header_permissions": { "message": "Zugelassene spezielle Operationen" },
+  "config_externalAddonPermissions_header_incognito": { "message": "Benachrichtigungen von privaten Fenstern" },
 
 
   "config_debug_caption": { "message": "Entwicklung" },
