--- a/webextensions/_locales/en/messages.json
+++ b/webextensions/_locales/en/messages.json
@@ -155,14 +155,10 @@
   "bookmarkFolderChooser_blank":         { "message": "(no name)" },
   "bookmarkFolderChooser_useThisFolder": { "message": "Use this folder" },
 
-  "message_startup_description_1": { "message": "Tree Style Tab is now reborn based on WebExtensions technologies for Firefox 57 and later. Its vertical tab bar is available as one of choosable sidebar panels. If you don't see it yet, hit the " },
+  "message_startup_description_1": { "message": "Tree Style Tab's vertical tab bar is available as one of choosable sidebar panels. If you don't see it yet, hit the " },
   "message_startup_description_key": { "message": "\"F1\" key" },
   "message_startup_description_2": { "message": " or click the " },
   "message_startup_description_3": { "message": " button in the toolbar, to activate the sidebar panel." },
-  "message_startup_migrateSessions_before": { "message": "Tree structure of tabs on Firefox 56 or olders is not migrated automatically. See " },
-  "message_startup_migrateSessions_link_label": { "message": "the instruction for manual migration of tree information" },
-  "message_startup_migrateSessions_after": { "message": "." },
-  "migrateSessions_link_uri": { "message": "https://github.com/piroor/treestyletab/wiki/How-to-convert-session-information-from-old-TST-0.19.x-to-new-TST-2.x" },
 
   "message_startup_requestPermissions_description": { "message": "⚠There are some features requiring extra permissions. If you want to activate them, please grant permissions manually." },
   "message_startup_requestPermissions_bookmarks": { "message": "\"Bookmark This Tree\" in the context menu on tabs (requires access to bookmarks)" },
