--- a/webextensions/_locales/de/messages.json
+++ b/webextensions/_locales/de/messages.json
@@ -103,7 +103,7 @@
     }},
 
   "bookmark_notification_notPermitted_title": { "message": "Berechtigungs-Fehler" },
-  "bookmark_notification_notPermitted_message": { "message": "Fehlende Berechtigung zum Erstellen von Lesezeichen. Bitte erlaube das Erstellen von Leszeichen in den Einstellungen von Tree Style Tab." },
+  "bookmark_notification_notPermitted_message": { "message": "Fehlende Berechtigung zum Erstellen von Lesezeichen. Please click here to grant extra permissions." },
 
   "dropLinksOnTabBehavior_message": { "message": "Wie soll der Link geöffnet werden?" },
   "dropLinksOnTabBehavior_save":    { "message": "Die Auswahl beim nächsten Mal beibehalten" },
