Restructure config UI for the behavior around closed parent tab #2333

--- a/webextensions/_locales/en/messages.json
+++ b/webextensions/_locales/en/messages.json
@@ -335,11 +335,6 @@
   "config_successorTabControlLevel_legacyDescription": { "message": "*Firefox's built-in behavior for \"browser.tabs.selectOwnerOnClose\"=\"true\" works prior to this config." },
   "config_simulateSelectOwnerOnClose_label": { "message": "Move focus back to the opener tab if possible, when the current tab is closed (*simulation of Firefox's built-in behavior for \"browser.tabs.selectOwnerOnClose\"=\"true\", prior to the config above)" },
 
-  "config_parentTabBehaviorForChanges_caption": { "message": "When a parent tab is moved or closed by someone from outside of the tree sidebar" },
-  "config_parentTabBehaviorForChanges_always": { "message": "Treat as a parent always (move or close all descendant tabs also together), whether the tree sidebar is visible or not." },
-  "config_parentTabBehaviorForChanges_alwaysButOnlyWhenVisible": { "message": "Treat as a parent always, when the tree sidebar is visible. / Treat just as a solo tab, when the tree sidebar is invisible." },
-  "config_parentTabBehaviorForChanges_onlyInSidebar": { "message": "Treat as a parent by operations inside the tree sidebar. / Treat just as a solo tab, by operations outside the tree sidebar." },
-
   "config_fixupTreeOnTabVisibilityChanged_caption": { "message": "When visibility of tabs are changed by other addons" },
   "config_fixupTreeOnTabVisibilityChanged_fix":     { "message": "Fix up tree structure with visible tabs automatically (*Recommended if you use another addon to switch tab groups)" },
   "config_fixupTreeOnTabVisibilityChanged_keep":    { "message": "Keep tree structure including hidden tabs (*Recommended if you use another addon which changes temporary visibility of tabs)" },
@@ -349,13 +344,22 @@
   "config_autoCollapseExpandSubtreeOnSelectExceptActiveTabRemove_label": { "message": "Except focus moving caused by closing of the current tab" },
   "config_collapseExpandSubtreeByDblClick_label": { "message": "Double-click on a tab to collapse/expand tree" },
 
-  "config_closeParentBehavior_caption": { "message": "When a parent tab is closed with expanded tree" },
-  "config_closeParentBehavior_close": { "message": "Close child tabs too" },
-  "config_closeParentBehavior_replaceWithGroupTab": { "message": "Replace closed parent with a dummy tab and keep the tree" },
-  "config_closeParentBehavior_promoteFirst": { "message": "Promote the first child tab as the new parent" },
-  "config_closeParentBehavior_promoteAll": { "message": "Promote all child tabs as the level of the closed parent tab" },
-  "config_promoteFirstChildForClosedRoot_label": { "message": "Promote the first child tab as the new parent, if the closed parent has no parent" },
-  "config_closeParentBehavior_detach": { "message": "Liberate child tabs from the tree" },
+  "config_closeParentBehaviorMode_caption":           { "message": "When a parent tab is closed or moved just as a solo tab" },
+  "config_closeParentBehaviorMode_withNativeTabs":    { "message": "Recommended behavior for people who still use the native tab bar of Firefox itself also" },
+  "config_closeParentBehaviorMode_withNativeTabs_caption_withoutSidebar": { "message": "Keep the tree structure and numbed of tabs if possible, for operations while the tree sidebar is invisible." },
+  "config_closeParentBehaviorMode_withNativeTabs_caption_withSidebar":    { "message": "When the tree sidebar is visible:" },
+  "config_closeParentBehaviorMode_withoutNativeTabs": { "message": "Recommended behavior for people who never use the native tab bar of Firefox itself" },
+  "config_closeParentBehaviorMode_withoutNativeTabs_caption":    { "message": "Regardless the visibility of the tree sidebar, for any operation:" },
+  "config_closeParentBehaviorMode_custom":            { "message": "Custom" },
+  "config_closeParentBehaviorMode_custom_caption_insideSidebar":  { "message": "For operations inside the tree sidebar:" },
+  "config_closeParentBehaviorMode_custom_caption_outsideSidebar": { "message": "For operations on the native tab bar, keyboard shortcuts, or other addons while the tree sidebar is visible:" },
+  "config_closeParentBehaviorMode_custom_caption_noSidebar":      { "message": "For operations on the native tab bar, keyboard shortcuts, or other addons" },
+  "config_closeParentBehavior_close":                { "message": "Close descendants too" },
+  "config_closeParentBehavior_replaceWithGroupTab":  { "message": "Replace closed parent with a dummy tab and keep the tree" },
+  "config_closeParentBehavior_promoteFirst":         { "message": "Promote the first child as the new parent always" },
+  "config_closeParentBehavior_promoteAll":           { "message": "Promote all children as the level of the closed parent always" },
+  "config_closeParentBehavior_promoteIntelligently": { "message": "Promote the first child when a root tab was closed, otherwise promote all children" },
+  "config_closeParentBehavior_detach":               { "message": "Liberate child tabs from the tree" },
 
   "config_warnOnCloseTabs_label": { "message": "Warn me when I attempt to close multiple tabs" },
 
