--- a/webextensions/_locales/ja/messages.json
+++ b/webextensions/_locales/ja/messages.json
@@ -331,11 +331,6 @@
   "config_successorTabControlLevel_legacyDescription": { "message": "※Firefox組み込みの機能である\"browser.tabs.selectOwnerOnClose\"=\"true\"の挙動の方が、この設定よりも優先的に反映されます。" },
   "config_simulateSelectOwnerOnClose_label": { "message": "現在のタブが閉じられた時、可能であればそのタブを開いた元のタブにフォーカスを戻す（※Firefox組み込みの機能である\"browser.tabs.selectOwnerOnClose\"=\"true\"の挙動の再現。上記の設定よりも優先的に反映されます。）" },
 
-  "config_parentTabBehaviorForChanges_caption": { "message": "親のタブがツリー型タブのサイドバー以外の場所から移動されたり閉じられたりした場合の取り扱い" },
-  "config_parentTabBehaviorForChanges_always": { "message": "サイドバーの表示状態に関わらず常に親タブとして扱い、配下のタブも併せて移動するか閉じる" },
-  "config_parentTabBehaviorForChanges_alwaysButOnlyWhenVisible": { "message": "サイドバーが表示されている時は常に親タブとして扱う / サイドバーが表示されていない場合は単体のタブとして扱う" },
-  "config_parentTabBehaviorForChanges_onlyInSidebar": { "message": "サイドバー上で操作された時は親タブとして扱う / サイドバー外で操作された時は単体のタブとして扱う" },
-
   "config_fixupTreeOnTabVisibilityChanged_caption": { "message": "タブの表示・非表示が他のアドオンによって切り替えられた場合" },
   "config_fixupTreeOnTabVisibilityChanged_fix":     { "message": "表示中のタブに基づいてツリー構造を自動的に修正する（※タブのグループを切り替えるアドオンとの併用時に推奨）" },
   "config_fixupTreeOnTabVisibilityChanged_keep":    { "message": "非表示のタブも含めてツリー構造を維持する（※一時的にタブを非表示にするアドオンとの併用時に推奨）" },
@@ -345,13 +340,22 @@
   "config_autoCollapseExpandSubtreeOnSelectExceptActiveTabRemove_label": { "message": "現在のタブを閉じてタブのフォーカスが切り替わった場合を除く" },
   "config_collapseExpandSubtreeByDblClick_label": { "message": "タブのダブルクリックでツリーを開閉する" },
 
-  "config_closeParentBehavior_caption": { "message": "展開されたツリーで親のタブを閉じた時の挙動" },
-  "config_closeParentBehavior_close": { "message": "子孫のタブも一緒に閉じる" },
-  "config_closeParentBehavior_replaceWithGroupTab": { "message": "代わりにグループ化用のダミーのタブを開いてツリーを維持する" },
-  "config_closeParentBehavior_promoteFirst": { "message": "最初の子タブを新しい親にする" },
-  "config_closeParentBehavior_promoteAll": { "message": "閉じた親タブの階層に子孫のタブを移動する" },
-  "config_promoteFirstChildForClosedRoot_label": { "message": "最上位の親タブを閉じた時だけは、最初の子タブを新しい親にする" },
-  "config_closeParentBehavior_detach": { "message": "子孫のタブをツリーから解放する" },
+  "config_closeParentBehaviorMode_caption":           { "message": "親タブを単独で閉じたり移動したりした時の挙動" },
+  "config_closeParentBehaviorMode_withNativeTabs":    { "message": "Firefox自身のタブバーを併用する場合向けの動作にする" },
+  "config_closeParentBehaviorMode_withNativeTabs_caption_withoutSidebar": { "message": "サイドバー非表示時は、可能な限りツリー構造を維持し、余計なタブは開かない。" },
+  "config_closeParentBehaviorMode_withNativeTabs_caption_withSidebar":    { "message": "サイドバー表示時は、" },
+  "config_closeParentBehaviorMode_withoutNativeTabs": { "message": "Firefox自身のタブバーを併用しない場合向けの動作にする" },
+  "config_closeParentBehaviorMode_withoutNativeTabs_caption":    { "message": "サイドバーが表示されていてもいなくても、" },
+  "config_closeParentBehaviorMode_custom":            { "message": "カスタム" },
+  "config_closeParentBehaviorMode_custom_caption_insideSidebar":  { "message": "サイドバー内でタブを操作した場合は、" },
+  "config_closeParentBehaviorMode_custom_caption_outsideSidebar": { "message": "サイドバー表示時にサイドバー外でタブを操作した場合は、" },
+  "config_closeParentBehaviorMode_custom_caption_noSidebar":      { "message": "サイドバー非表示時にサイドバー外でタブを操作した場合は、" },
+  "config_closeParentBehavior_close":                { "message": "子孫のタブも一緒に閉じる" },
+  "config_closeParentBehavior_replaceWithGroupTab":  { "message": "代わりにグループ化用のダミーのタブを開いてツリーを維持する" },
+  "config_closeParentBehavior_promoteFirst":         { "message": "常に最初の子タブを新しい親に昇格させる" },
+  "config_closeParentBehavior_promoteAll":           { "message": "常にすべての子タブを昇格させる" },
+  "config_closeParentBehavior_promoteIntelligently": { "message": "最上位の親が閉じられた時は最初の子を昇格させ、それ以外の場合はすべての子タブを昇格させる" },
+  "config_closeParentBehavior_detach":               { "message": "子孫のタブをツリーから解放する" },
 
   "config_warnOnCloseTabs_label": { "message": "同時に複数のタブを閉じるときは確認する" },
 
